    - rough_count(n,k)                count of k-rough numbers <= n
    - allsqrtmod(a,n)                 all square roots of a (mod n)
    - qnr(n)                          least quadratic non-residue
    - binomialmod(n,k,m)              fast binomial(n,k) mod m
    - submod(a, b, n)                 a - b mod n
    - rootmod(a, k, n)                modular k-th root
    - vecequal(\@a, \@b)              compare two arrays for equality
    - tozeckendorf(n)                 Zeckendorf binary string from n
    - fromzeckendorf(str)             n from Zeckendorf binary string
    - lucasu(p,q,k)                   U(p,q)_k
    - lucasv(p,q,k)                   V(p,q)_k
    - lucasuv(p,q,k)                  U(p,q)_k, V(p,q)_k
    - lucasumod(p,q,k,n)              U(p,q)_k mod n
    - lucasvmod(p,q,k,n)              V(p,q)_k mod n
    - lucasuvmod(p,q,k,n)             U(p,q)_k, V(p,q)_k, q^k  all mod n

    [FIXES]

    - nth_ramanujan_* returns undef with input of 0.

    - PP code for is_polygonal with n=0 was wrong.  Fixed and refactored.

    - Some large results that used GMP are properly objectified.

    - When using GMP, native int results are no longer objectified.

    - AKS was modding a with r, since 2012.

    - is_totient(2^k) with k >= 33, found by Trizen in 2019.

    - forsquarefree and forfactored were missing a destroy.  From Trizen.

    - todigitstring with non-standard bases and long strings.  From Trizen.

    - Fix v0.62 breaking extended precision long doubles on some machines.
      Big difference in epsilon-level precision for LambertW, Li, Zeta.

    - sieve_range documentation for depth didn't exactly match the XS code.

    - is_extra_strong_lucas_pseudoprime(5) was returning 0.

    - lucas_sequence wasn't right for some outlier cases.  This did not
      impact any primality tests or other internal code.

    - gcd(-n) and lcd(-n) would return -n instead of n.

    - All mod functions are more consistent.  Like Pari, we use mod abs(n).