@@ -61,7 +61,9 @@ my @functions =  qw(
       primorial pn_primorial consecutive_integer_lcm gcdext chinese
       gcd lcm factor factor_exp divisors valuation hammingweight
       todigits fromdigits todigitstring sumdigits
-      invmod sqrtmod allsqrtmod addmod mulmod divmod powmod
+      tozeckendorf fromzeckendorf
+      sqrtmod allsqrtmod rootmod allrootmod
+      invmod addmod submod mulmod divmod powmod qnr
       vecsum vecmin vecmax vecprod vecreduce vecextract
       vecany vecall vecnotall vecnone vecfirst vecfirstidx
       moebius mertens euler_phi jordan_totient exp_mangoldt liouville
